# UNN-WinterSchool-2025

./: .gitignore  .gitmodules  README.md  build.sh  results.txt
.github/workflows/: pipeline.yml
cmake/: common_configuration.cmake
docs/: InstallEnv.md
gem5/: configuration.py
lib/: CMakeLists.txt
lib/include/: common.h  rvv.h  scalar.h
lib/src/rvv/: abs.c  alpha_compositing.c  axbpy.c  blur_filter.c  dot.c  gemm.c  gemv.c  iamin.c  nrm2.c  strlen.c  symv.c
lib/src/scalar/: abs.c  alpha_compositing.c  axbpy.c  blur_filter.c  dot.c  gemm.c  gemv.c  iamin.c  nrm2.c  strlen.c  symv.c
perf/: CMakeLists.txt
perf/include/: perf_common.hpp
perf/src/: abs.cpp  alpha_compositing.cpp  axpby.cpp  dot.cpp  gemm.cpp  gemv.cpp  iamin.cpp  strlen.cpp  symv.cpp
test/: CMakeLists.txt
test/include/: abs_test.hpp  alpha_compositing_test.hpp  axpby_test.hpp  blur_filter_test.hpp  dot_test.hpp  gemm_test.hpp  gemv_test.hpp  iamin_test.hpp  nrm2_test.hpp  strlen_test.hpp  symv_test.hpp  test_common.hpp
test/src/abs/: abs_ref.cpp  abs_test.cpp
test/src/alpha_compositing/: alpha_compositing_ref.cpp  alpha_compositing_test.cpp
test/src/axpby/: axpby_ref.cpp  axpby_test.cpp
test/src/blur_filter/: blur_filter_ref.cpp  blur_filter_test.cpp
test/src/dot/: dot_ref.cpp  dot_test.cpp
test/src/gemm/: gemm_ref.cpp  gemm_test.cpp
test/src/gemv/: gemv_ref.cpp  gemv_test.cpp
test/src/iamin/: iamin_ref.cpp  iamin_test.cpp
test/src/nrm2/: nrm2_ref.cpp  nrm2_test.cpp
test/src/strlen/: strlen_ref.cpp  strlen_test.cpp
test/src/symv/: symv_ref.cpp  symv_test.cpp
